Fix navbar overlaying page on mobile

--- a/public/static/styles/mobile/navbar.css
+++ b/public/static/styles/mobile/navbar.css
@@ -19,10 +19,10 @@ body{
 header{
 	position: fixed;
 	display: block;
-	width: 100%;
+	width: 10%;
 	height: 100%;
 	top : 0;
-  z-index: 1;
+  	z-index: 1;
 	left: 0;
 }
 
